# ZecX-HPot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PHASES.md  README.md  config.example.toml  config.toml  go.mod  go.sum  index.html  main.go  reporttemp.md  reset_honeypot.sh
.github/workflows/: ci.yml
cmd/zecx-deploy/: main.go
cmd/zecx-uninstall/: main.go
honeypot_fs/etc/: auth525-2.txt  auth811-19.txt  auth853-21.txt  auth952-3.txt  backup441.conf  backup616-33.txt  backup967-8.txt  cache219-0.txt  cache225-43.txt  cache303.conf  cache547-25.txt  cache752.conf  cache903-7.txt  config124-39.txt  config431.conf  config563.conf  config816.conf  config914.conf  data174.conf  data314.conf  data485-14.txt  data602-42.txt  data814.conf  data874-48.txt  log618-38.txt  log982-29.txt  passwd  session361-46.txt  session444.conf  session584-6.txt  session954-10.txt  session985-45.txt  session998-16.txt  shadow  ssh325.conf  ssh337.conf  ssh737-17.txt  ssh781-11.txt  ssh845.conf  user123-41.txt  (+3 more)
honeypot_fs/home/: auth202.conf  auth392-23.txt  auth511-12.txt  auth766-6.txt  auth855.conf  auth909-1.txt  auth934-31.txt  backup363-18.txt  cache255.conf  cache413-10.txt  cache525-38.txt  cache529-4.txt  config451-7.txt  (+20 more)
scripts/: decrypt_pending.py  decrypt_pending.sh  package-linux.sh  setup-linux.sh  setup-windows.ps1  wsl_kali_setup.sh
src/: config.rs  fsgen.rs  lib.rs  listener.rs  main.rs  metrics.rs  reporter.rs  util.rs
systemd/: proto-honeypot.service
tests/: fsgen_integration.rs  reporter_encryption.rs  reporter_integration.rs  retention.rs  udp_listener.rs
(+93 files in other folders)
